# ojichat_rs_cli

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint.sh
.github/: dependabot.yml
.github/workflows/: release.yaml  test.yaml
src/: main.rs
